--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -34,6 +34,9 @@
 \defaultLineSpace    		%%% Line spacing
 
 %%%\balance
+\input{method.tex}
+\input{experiment.tex}
+\input{result.tex}
 \input{tool.tex}
 \input{references.tex}
 
