--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -4,3 +4,10 @@
   url={https://github.com/smortezah/smashpp},
   date={\today}
 }
+
+@online{web-goose,
+  title={GOOSE},
+  author={Pratas, Diogo},
+  url={https://github.com/pratas/goose},
+  date={\today}
+}
