--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -72,6 +72,8 @@ DESCRIPTION
                        (INT) 𝜏:  threshold (no. substitutions)
 \end{code}
 
+The arguments ``-r'' and ``-t'' are used to specify the reference and the target files. It is highly recommended to choose short names for these files. Note that if a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T' bases, he/she can employ GOOSE toolkit~\cite{web-goose}.
+
 % In the second~line of the \smashpp usage guide, ``\mono{-d}'' option can only be used for \ddion.
 
 % In the fifth and sixth~lines, two samples are shown for \ceion as well as \ddion.
