--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -72,7 +72,9 @@ DESCRIPTION
                        (INT) 𝜏:  threshold (no. substitutions)
 \end{code}
 
-The arguments ``-r'' and ``-t'' are used to specify the reference and the target files. It is highly recommended to choose short names for these files. Note that if a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T' bases, he/she can employ GOOSE toolkit~\cite{web-goose}.
+The arguments ``-r'' and ``-t'' are used to specify the reference and the target files. It is highly recommended to choose short names for these files.
+
+Here, on reference-based compression, we have replaced `N' bases in the references with `A's and `N' bases in the targets with `T's. Also, on reference-free compression, we have replaced `N's in the references and the targets with `A's. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}.
 
 % In the second~line of the \smashpp usage guide, ``\mono{-d}'' option can only be used for \ddion.
 
