--- a/paper/method.tex
+++ b/paper/method.tex
@@ -1,3 +1,9 @@
 \clearpage
 \section{Methods}
 \label{sec:methods}
+
+\begin{figure}[!h]
+\includegraphics[width=\linewidth]{schema.pdf}
+\caption{The schema of Smash++.}
+\label{fig1}
+\end{figure}
