--- a/paper/__latexindent_temp.tex
+++ b/paper/__latexindent_temp.tex
@@ -27,6 +27,7 @@ Besides Hann window, that is used as default to filter the profile information o
 
 
 % void hamming();
+% void hann();
 % void blackman();
 % void triangular();  // Bartlett window
 % void welch();
