--- a/paper/experiment.tex
+++ b/paper/experiment.tex
@@ -1,13 +1,13 @@
 \clearpage
 \section{Experiment setup}
-\label{sec:experiment}
+\label{sec.experiment}
 
 
 \subsection{Datasets}
 
 \begin{table}[h]
 \caption{Datasets used in the experiments.}
-\label{tab:dataset}
+\label{tab.dataset}
 \begin{tabular}{@{}llrlrl@{}}
 \toprule
 Category & Reference & \multicolumn{1}{l}{Length (base)} & Target & \multicolumn{1}{l}{Length (base)} & Description \\
