--- a/paper/method.tex
+++ b/paper/method.tex
@@ -2,6 +2,8 @@
 \section{Methods}
 \label{sec.methods}
 
+Schema of the proposed method is illustrated in Fig.~\ref{fig.schema}. There are five major stages in this method, including 
+
 \begin{figure}[!h]
 \includegraphics[width=\linewidth]{schema.pdf}
 \caption{The schema of Smash++.}
