--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -3,6 +3,12 @@
 %]{article}
 \documentclass[a4paper,9pt]{extarticle}
 
+%%%%  Math
+\usepackage{amsmath}
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
+\newcommand*{\argminl}{\argmin\limits}
+\newcommand*{\argmaxl}{\argmax\limits}
 
 %%%%  Page margins
 \usepackage{geometry}
