--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Tool availability and implementation}
 \label{sec.tool}
-\smashpp is implemented in \cpp language and is available at~\cite{web-smashpp}. This tool is able to find rearrangements in sequences, \fasta and \fastq files; although, it is highly recommended to use sequences as input. To work with \smashpp, it should be first installed. 
+\smashpp is implemented in \cpp language and is available at~\cite{web-smashpp}. This tool is able to find rearrangements in sequences, FASTA and FASTQ files; although, it is highly recommended to use sequences as input. To work with \smashpp, it should be first installed. 
 % Besides running \smashpp in stand-alone mode, it is possible to compare it with other methods, by means of a set of \bash scripts. 
 In the following sections, we describe installing and running \smashpp.
 
