--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -11,3 +11,492 @@
   url={https://github.com/pratas/goose},
   date={\today}
 }
+
+@article{blackman1959particular,
+  title={Particular pairs of windows},
+  author={Blackman, RB and Tukey, JW},
+  journal={The measurement of power spectra, from the point of view of communications engineering},
+  pages={95--101},
+  year={1959},
+  publisher={Dover New York}
+}
+
+@article{bartlett1950periodogram,
+  title={Periodogram analysis and continuous spectra},
+  author={Bartlett, Maurice S},
+  journal={Biometrika},
+  volume={37},
+  number={1/2},
+  pages={1--16},
+  year={1950},
+  publisher={JSTOR}
+}
+
+@book{tukey1949measuring,
+  title={Measuring noise color},
+  author={Tukey, John Wilder and Hamming, Robert Wesley},
+  year={1949},
+  publisher={Bell Telephone Laboratories}
+}
+
+@article{welch1967use,
+  title={The use of fast {Fourier} transform for the estimation of power spectra: a method based on time averaging over short, modified periodograms},
+  author={Welch, Peter},
+  journal={IEEE Transactions on audio and electroacoustics},
+  volume={15},
+  number={2},
+  pages={70--73},
+  year={1967},
+  publisher={IEEE}
+}
+
+@article{nuttall1981some,
+  title={Some windows with very good sidelobe behavior},
+  author={Nuttall, Albert},
+  journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+  volume={29},
+  number={1},
+  pages={84--91},
+  year={1981},
+  publisher={IEEE}
+}
+
+@article{harris1978use,
+  title={On the use of windows for harmonic analysis with the discrete {Fourier} transform},
+  author={Harris, Fredric J},
+  journal={Proceedings of the IEEE},
+  volume={66},
+  number={1},
+  pages={51--83},
+  year={1978},
+  publisher={IEEE}
+}
+
+@book{oppenheim1999discrete,
+  title={Discrete-Time Signal Processing},
+  author={Oppenheim, Alan V. and Ronald W. Schafer and John R. Buck},
+  pages={468--471},
+  year={1999},
+  publisher={Upper Saddle River, NJ: Prentice Hall}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+*************************************************************************
+*************************************************************************
+*************************************************************************
+@online{web-ac,
+  title={{AC}},
+  author={Pratas, Diogo and Hosseini, Morteza and Pinho, Armando J},
+  url={https://github.com/pratas/ac},
+  date={\today},
+}
+
+@online{web-uniprot,
+  title={{UniProt}},
+  author={UniProt Consortium},
+  url={ftp://ftp.uniprot.org/pub/databases/uniprot/current\_release/knowledgebase/reference\_proteomes},
+  date={\today},
+}
+
+@online{web-dataset,
+  title={},
+  author={Pratas, Diogo},
+  url={http://sweet.ua.pt/pratas/datasets/AminoAcidsCorpus.zip},
+  date={\today},
+}
+
+@article{rafizulHaque2013new,
+  title={A new approach of protein sequence compression using repeat reduction and {ASCII} replacement},
+  author={Rafizul Haque, SM and Mallick, T and Kabir, IS},
+  journal={IOSR Journal of Computer Engineering (IOSR-JCE)},
+  volume={10},
+  pages={46--51},
+  year={2013}
+}
+
+@book{ward2014virtual,
+  title={Virtual organisms: The startling world of artificial life},
+  author={Ward, M},
+  publisher={Macmillan},
+  year={2014}
+}
+
+@article{wootton1994non,
+  title={Non-globular domains in protein sequences: automated segmentation using complexity measures},
+  author={Wootton, JC},
+  journal={Computers \& Chemistry},
+  volume={18},
+  pages={269--285},
+  year={1994}
+}
+
+@article{benedetto2007compressing,
+  title={Compressing proteomes: The relevance of medium range correlations},
+  author={Benedetto, D and Caglioti, E and Chica, C},
+  journal={Eurasip Journal on Bioinformatics and Systems Biology},
+  volume={2007:60723},
+  year={2007}
+}
+
+@article{yu2016natural,
+  title={Natural protein sequences are more intrinsically disordered than random sequences},
+  author={Yu, JF and Cao, Z and Yang, Y and Wang, CL and Su, ZD and Zhao, YW and Wang, JH and Zhou, Y},
+  journal={Cellular and Molecular Life Sciences},
+  pages={1-9},
+  year={2016}
+}
+
+@article{nalbantoglu2009data,
+  title={Data compression concepts and algorithms and their applications to bioinformatics},
+  author={Nalbantoglu, {\"O}zkan U and Russell, David J and Sayood, Khalid},
+  journal={Entropy},
+  volume={12},
+  number={1},
+  pages={34--52},
+  year={2009},
+  publisher={Molecular Diversity Preservation International}
+}
+
+@inproceedings{nevill1999protein,
+  title={Protein is incompressible},
+  author={Nevill-Manning, Craig G and Witten, Ian H},
+  booktitle={Proceedings of DCC '99: Data Compression Conference},
+  pages={257--266},
+  year={1999},
+  organization={IEEE}
+}
+
+@inproceedings{iupac1972a,
+  title={A one-letter notation for amino acid sequences},
+  author={{IUPAC-IUB Commission on Biochemical Nomenclature}},
+  volume={31},
+  number={4},
+  pages={641--645},
+  year={1972}
+}
+
+@inproceedings{pratas2018compression,
+  title={Compression of amino acid sequences},
+  author={Pratas, Diogo and Hosseini, Morteza and Pinho, Armando J},
+  booktitle={International Conference on Practical Applications of Computational Biology \& Bioinformatics (PACBB)},
+  pages={},
+  year={2018},
+  organization={Springer}
+}
+
+@article{eckhard2016positional,
+  title={Positional proteomics in the era of the human proteome project on the doorstep of precision medicine},
+  author={Eckhard, Ulrich and Marino, Giada and Butler, Georgina S and Overall, Christopher M},
+  journal={Biochimie},
+  volume={122},
+  pages={110--118},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{legrain2011human,
+  title={The human proteome project: current state and future direction},
+  author={Legrain, Pierre and Aebersold, Ruedi and Archakov, Alexander and Bairoch, Amos and Bala, Kumar and Beretta, Laura and Bergeron, John and Borchers, Christoph H and Corthals, Garry L and Costello, Catherine E and others},
+  journal={Molecular \& cellular proteomics},
+  volume={10},
+  number={7},
+  pages={M111--009993},
+  year={2011},
+  publisher={ASBMB}
+}
+
+@article{paik2012chromosome,
+  title={The Chromosome-Centric Human Proteome Project for cataloging proteins encoded in the genome},
+  author={Paik, Young-Ki and Jeong, Seul-Ki and Omenn, Gilbert S and Uhlen, Mathias and Hanash, Samir and Cho, Sang Yun and Lee, Hyoung-Joo and Na, Keun and Choi, Eun-Young and Yan, Fangfei and others},
+  journal={Nature biotechnology},
+  volume={30},
+  number={3},
+  pages={221},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{baker2017accelerating,
+  title={Accelerating the search for the missing proteins in the human proteome},
+  author={Baker, Mark S and Ahn, Seong Beom and Mohamedali, Abidali and Islam, Mohammad T and Cantor, David and Verhaert, Peter D and Fanayan, Susan and Sharma, Samridhi and Nice, Edouard C and Connor, Mark and others},
+  journal={Nature communications},
+  volume={8},
+  pages={14271},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{uniprot2016uniprot,
+  title={{UniProt}: the universal protein knowledgebase},
+  author={UniProt Consortium},
+  journal={Nucleic acids research},
+  volume={45},
+  number={D1},
+  pages={D158--D169},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{hategan2004protein,
+  title={Protein is compressible},
+  author={Hategan, Andrea and Tabus, Ioan},
+  booktitle={Signal Processing Symposium, 2004. NORSIG 2004. Proceedings of the 6th Nordic},
+  pages={192--195},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{matsumoto2000biological,
+  title={Biological sequence compression algorithms},
+  author={Matsumoto, T and Sadakane, K and Imai, H},
+  journal={Genome Informatics},
+  volume={11},
+  pages={43--52},
+  year={2000}
+}
+
+@article{willems1995context,
+  title={The context tree weighting method: basic properties},
+  author={Willems, FMJ and Shtarkov, YM and Tjalkens, TJ},
+  journal={IEEE Transactions on Information Theory},
+  volume={41},
+  pages={653--664},
+  year={1995}
+}
+
+@inproceedings{cao2007simple,
+  title={A simple statistical algorithm for biological sequence compression},
+  author={Cao, Minh Duc and Dix, Trevor I and Allison, Lloyd and Mears, Chris},
+  booktitle={Proceedings of DCC '07: Data Compression Conference},
+  pages={43--52},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{adjeroh2006compressibility,
+  title={On compressibility of protein sequences},
+  author={Adjeroh, Donald and Nan, Fei},
+  booktitle={Proceedings of DCC '06: Data Compression Conference},
+  pages={10--19},
+  year={2006},
+  organization={IEEE}
+}
+
+@inproceedings{adjeroh2003scp,
+  title={The {SCP} and compressed domain analysis of biological sequences},
+  author={Adjeroh, Donald and Feng, Jianan},
+  booktitle={Proceedings of IEEE Bioinformatics Conference},
+  pages={587--592},
+  year={2003}
+}
+
+@article{burrows1994block,
+  title={A block-sorting lossless data compression algorithm},
+  author={Burrows, Michael and Wheeler, David J},
+  journal={\textit{Technical Report}, Digital Equipment Corporation, Palo Alto, CA},
+  year={1994},
+  publisher={Citeseer}
+}
+
+@article{hosseini2016survey,
+  title={A survey on data compression methods for biological sequences},
+  author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
+  journal={Information},
+  volume={7},
+  number={4},
+  pages={56},
+  year={2016},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{korber1993covariation,
+  title={Covariation of mutations in the V3 loop of human immunodeficiency virus type 1 envelope protein: an information theoretic analysis},
+  author={Korber, BT and Farber, Robert M and Wolpert, David H and Lapedes, Alan S},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={90},
+  number={15},
+  pages={7176--7180},
+  year={1993},
+  publisher={National Acad Sciences}
+}
+
+@article{hayashida2014proteome,
+  title={Proteome compression via protein domain compositions},
+  author={Hayashida, Morihiro and Ruan, Peiying and Akutsu, Tatsuya},
+  journal={Methods},
+  volume={67},
+  number={3},
+  pages={380--385},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{pelta2005protein,
+  title={Protein Structure Comparison through Fuzzy Contact Maps and the Universal Similarity Metric.},
+  author={Pelta, David A and Gonzalez, Juan Ram{\'o}n and Krasnogor, Natalio},
+  booktitle={EUSFLAT Conf.},
+  pages={1124--1129},
+  year={2005}
+}
+
+@article{rocha2006compression,
+  title={Compression ratios based on the Universal Similarity Metric still yield protein distances far from {CATH} distances},
+  author={Rocha, Jairo and Rossell{\'o}, Francesc and Segura, Joan},
+  journal={arXiv preprint q-bio/0603007},
+  year={2006}
+}
+
+@inproceedings{pratas2016efficient,
+  title={Efficient compression of genomic sequences},
+  author={Pratas, Diogo and Pinho, Armando J and Ferreira, Paulo JSG},
+  booktitle={Proceedings of DCC '16: Data Compression Conference},
+  pages={231--240},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{pratas2017substitutional,
+  title={Substitutional tolerant {Markov} models for relative compression of {DNA} sequences},
+  author={Pratas, Diogo and Hosseini, Morteza and Pinho, Armando J},
+  booktitle={International Conference on Practical Applications of Computational Biology \& Bioinformatics (PACBB)},
+  pages={265--272},
+  year={2017},
+  organization={Springer}
+}
+
+@article{pinho2011representability,
+  title={On the representability of complete genomes by multiple competing finite-context ({Markov}) models},
+  author={Pinho, Armando J and Ferreira, Paulo JSG and Neves, Ant{\'o}nio JR and Bastos, Carlos AC},
+  journal={PloS one},
+  volume={6},
+  number={6},
+  pages={e21588},
+  year={2011},
+  publisher={Public Library of Science}
+}
+
+@article{pinho2013mfcompress,
+  title={{MFCompress: a compression tool for FASTA and multi-FASTA data}},
+  author={Pinho, Armando J and Pratas, Diogo},
+  journal={Bioinformatics},
+  volume={30},
+  number={1},
+  pages={117--118},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
+@book{sayood2017introduction,
+  title={Introduction to data compression},
+  author={Sayood, Khalid},
+  year={2017},
+  publisher={Morgan Kaufmann}
+}
+
+@article{pratas2015alignment,
+  title={{An alignment-free method to find and visualise rearrangements between pairs of DNA sequences}},
+  author={Pratas, Diogo and Silva, Raquel M and Pinho, Armando J and Ferreira, Paulo JSG},
+  journal={Scientific reports},
+  volume={5},
+  pages={10203},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{hosseini2018cryfa,
+	title={Cryfa: a secure encryption tool for genomic data},
+	author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
+	journal={Bioinformatics (Oxford, England)},
+	year={2018}
+}
+
+@article{deorowicz2018comsa,
+	title={CoMSA: Compression of protein multiple sequence alignment files.},
+	author={Deorowicz, Sebastian and Walczyszyn, Joanna and Debudaj-Grabysz, Agnieszka and Hancock, John},
+	journal={Bioinformatics (Oxford, England)},
+	year={2018}
+}
+
+@inproceedings{pratas2017approximation,
+	title={On the Approximation of the {Kolmogorov} Complexity for {DNA} Sequences},
+	author={Pratas, Diogo and Pinho, Armando J},
+	booktitle={Iberian Conference on Pattern Recognition and Image Analysis~(IbPRIA)},
+	pages={259--266},
+	year={2017},
+	organization={Springer}
+}
+
+@article{bywater2015prediction,
+  title={Prediction of protein structural features from sequence data based on {Shannon} entropy and {Kolmogorov} complexity},
+  author={Bywater, Robert Paul},
+  journal={PloS one},
+  volume={10},
+  number={4},
+  pages={e0119306},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@article{zenil2018decomposition,
+  title={A decomposition method for global evaluation of {Shannon} entropy and local estimations of algorithmic complexity},
+  author={Zenil, Hector and Hern{\'a}ndez-Orozco, Santiago and Kiani, Narsis and Soler-Toscano, Fernando and Rueda-Toicen, Antonio and Tegn{\'e}r, Jesper},
+  journal={Entropy},
+  volume={20},
+  number={8},
+  pages={605},
+  year={2018},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{zenil2018algorithmic,
+  title={Algorithmic Complexity and Reprogrammability of Chemical Structure Networks},
+  author={Zenil, Hector and Kiani, Narsis A and Shang, Ming-Mei and Tegn{\'e}r, Jesper},
+  journal={Parallel Processing Letters},
+  volume={28},
+  number={01},
+  pages={1850005},
+  year={2018},
+  publisher={World Scientific}
+}
+
+@article{soler2017computable,
+  title={A computable measure of algorithmic probability by finite approximations with an application to integer sequences},
+  author={Soler-Toscano, Fernando and Zenil, Hector},
+  journal={Complexity},
+  volume={2017},
+  year={2017},
+  publisher={Hindawi}
+}
+
+@article{kolmogorov1965three,
+  title={Three approaches to the quantitative definition of information},
+  author={Kolmogorov, Andrei N},
+  journal={Problems of information transmission},
+  volume={1},
+  number={1},
+  pages={1--7},
+  year={1965}
+}
+
+@article{pereira2016evolution,
+  title={Evolution of the {NET} ({NocA}, {Nlz}, {Elbow}, {TLP-1}) protein family in metazoans: insights from expression data and phylogenetic analysis},
+  author={Pereira, Filipe and Duarte-Pereira, Sara and Silva, Raquel M and Da Costa, Lu{\'\i}s Teixeira and Pereira-Castro, Isabel},
+  journal={Scientific reports},
+  volume={6},
+  pages={38383},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
